--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About Me","name":"Richard Veselý","url":"http://localhost:4000/about/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.png" >
+<link rel="shortcut icon" type="image/x-icon" href="//assets/images/favicon.png" >
 
   <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Richard Veselý" />
 </head>
