--- a/about/index.html
+++ b/about/index.html
@@ -81,7 +81,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <li><a href="/blog/letters-journal">Letters/Journal</a></li>
       </ul>
     </li>
-    <li><a href="/contact">Contact</a></li>
+    <!--li><a href="/contact">Contact</a></li-->
   </ul>
 </nav>
 </div>
@@ -105,6 +105,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
       </div>
     </main><footer class="site-footer h-card">
+  <!--
   <data class="u-url" href="/"></data>
 
   <div class="wrapper">
@@ -128,7 +129,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 
   </div>
-
+-->
 </footer>
 </body>
 
