--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <nav class="site-nav">
   <ul class="menu">
     <li><a href="/">Home</a></li>
-    <li><a href="/about-me">About me</a></li>
+    <!--li><a href="/about-me">About me</a></li-->
     <li class="dropdown">
       <a href="javascript:void(0)">Blog</a>
       <ul class="dropdown-content">
