--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
 <meta property="og:description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-<link rel="canonical" href="https://richard-vesely.github.io/" />
-<meta property="og:url" content="https://richard-vesely.github.io/" />
+<link rel="canonical" href="http://localhost:4000/" />
+<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Richard Veselý" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Home" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Home","name":"Richard Veselý","url":"https://richard-vesely.github.io/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Home","name":"Richard Veselý","url":"http://localhost:4000/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.png" >
 
-  <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://richard-vesely.github.io/feed.xml" title="Richard Veselý" />
+  <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Richard Veselý" />
 <script>
 document.addEventListener("DOMContentLoaded", function() {
   var hamburger = document.querySelector('.hamburger-icon');
@@ -69,7 +69,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </head>
 <body><header class="site-header">
   <div class="wrapper"><a class="site-title" rel="author" href="/">
-      <img src="/assets/images/cropped-fav.png" alt="Site Logo" style="height: 40px; vertical-align: middle;"> Richard <strong>Veselý</strong>
+      <img src="/assets/images/cropped-fav.webp" alt="Site Logo" style="height: 40px; vertical-align: middle;"> Richard <strong>Veselý</strong>
     </a>
 
 <!-- Hamburger Menu Icon -->
@@ -125,7 +125,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </p>
   </div>
   <div class="right-column">
-    <img src="/assets/images/foto3.jpg" alt="Richard Vesely photo" class="rounded-image">
+    <img src="/assets/images/foto3.webp" alt="Richard Vesely photo" class="rounded-image">
   </div>
 </div>
 
@@ -164,7 +164,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="https://richard-vesely.github.io/feed.xml">
+          <a href="http://localhost:4000/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
