--- a/toDeleteLater/2024-02-02-sample-science copy 6.html
+++ b/toDeleteLater/2024-02-02-sample-science copy 6.html
@@ -147,7 +147,11 @@ document.addEventListener('DOMContentLoaded', function() {
  "| newline_to_br"is some stuff related to newlines displaying weirdly
   https://stackoverflow.com/questions/52762454/jekyll-markdown-with-line-feed-is-not-rendered-in-html
   See the post above
---><a class="u-url" href="/toDeleteLater/2024-02-02-sample-science%20copy%206.html" hidden></a>
+-->
+<script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
+<hyvor-talk-comments website-id="10504" page-id=""></hyvor-talk-comments>
+
+  <a class="u-url" href="/toDeleteLater/2024-02-02-sample-science%20copy%206.html" hidden></a>
 </article>
 
       </div>
