hopefully fixed lang dependent hyvortalk website_id

--- a/education/my-main-purpose-in-teaching-science/index.html
+++ b/education/my-main-purpose-in-teaching-science/index.html
@@ -204,8 +204,7 @@ document.addEventListener('DOMContentLoaded', function() {
 -->
 
 <script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
-<hyvor-talk-comments website-id="10504" page-id=""></hyvor-talk-comments>
-
+<hyvor-talk-comments website-id=  page-id=""></hyvor-talk-comments>
 
   <a class="u-url" href="/education/my-main-purpose-in-teaching-science/" hidden></a>
 </article>
