Publishing: 3 questions for happiness

--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@ document.addEventListener('DOMContentLoaded', function() {
 <div class="blog-grid">
     
       <div class="blog-card" data-category="personal-growth">
+        <a href="/personal-growth/3-questions-for-happiness">
+          <h2>3 questions for happiness</h2>
+        </a>
+        <p>Here are three questions that determine most of your happiness in life: What am I working on and why? Who...</p>
+        <p class="date">May 30, 2024</p>
+      </div>
+    
+      <div class="blog-card" data-category="personal-growth">
         <a href="/personal-growth/fuck-being-normal">
           <h2>Fuck being normal</h2>
         </a>
