Publishing: The two questions to ask yourself when you have no friends

--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@ document.addEventListener('DOMContentLoaded', function() {
 <div class="blog-grid">
     
       <div class="blog-card" data-category="personal-growth">
+        <a href="/personal-growth/the-two-questions-to-ask-yourself-when-you-have-no-friends">
+          <h2>The two questions to ask yourself when you have no friends</h2>
+        </a>
+        <p>I was fourteen and I was crying. It was the most significant event in my life. But I didn’t know...</p>
+        <p class="date">August 25, 2024</p>
+      </div>
+    
+      <div class="blog-card" data-category="personal-growth">
         <a href="/personal-growth/3-questions-for-happiness">
           <h2>3 questions for happiness</h2>
         </a>
